--- a/service-bluetooth/web/index.html
+++ b/service-bluetooth/web/index.html
@@ -18,105 +18,93 @@
   <body>
 
 <form>
-  <input id="service" type="text" value="6e400001-b5a3-f393-e0a9-e50e24dcca9e" autofocus placeholder="Bluetooth Service">
-  <input id="characteristic" type="text" value="6e400002-b5a3-f393-e0a9-e50e24dcca9e" placeholder="Bluetooth Characteristic">
-  <button id="startNotifications">Start notifications</button>
-  <button id="stopNotifications">Stop notifications</button>
+  <button id="startNotifications">Start</button>
+  <button id="stopNotifications">Stop</button>
 </form>
 
 <h3>Access Points</h3>
 <ul id="aps"></ul>
 
-
 <script>
-// key is ap name, value is not used
-var aps = {}
+  // key is ap name, value is not used
+  var aps = {}
+  var serviceUuid = '6e400001-b5a3-f393-e0a9-e50e24dcca9e'
+  var listCharacteristicUuid = '6e400002-b5a3-f393-e0a9-e50e24dcca9e'
+  var setSSIDCharacteristicUuid = '6e400002-b5a3-f393-e0a9-e50e24dcca80'
+  var setPasswordCharacteristicUuid = '6e400002-b5a3-f393-e0a9-e50e24dcca81'
 
-var myCharacteristic;
+  var listCharacteristic, setSSIDCharacteristic, setPasswordCharacteristic
 
-async function onStartButtonClick() {
-  let serviceUuid = document.querySelector('#service').value;
-  if (serviceUuid.startsWith('0x')) {
-    serviceUuid = parseInt(serviceUuid);
-  }
-
-  let characteristicUuid = document.querySelector('#characteristic').value;
-  if (characteristicUuid.startsWith('0x')) {
-    characteristicUuid = parseInt(characteristicUuid);
-  }
-
-  try {
-    console.log('Requesting Bluetooth Device...');
-    const device = await navigator.bluetooth.requestDevice({
-        filters: [{services: [serviceUuid]}]});
-
-    console.log('Connecting to GATT Server...');
-    const server = await device.gatt.connect();
-
-    console.log('Getting Service...');
-    const service = await server.getPrimaryService(serviceUuid);
-
-    console.log('Getting Characteristic...');
-    myCharacteristic = await service.getCharacteristic(characteristicUuid);
-
-    await myCharacteristic.startNotifications()
-
-    console.log('> Notifications started')
-    myCharacteristic.addEventListener('characteristicvaluechanged',
-        handleNotifications);
-  } catch(error) {
-    console.log('Argh! ' + error)
-  }
-}
-
-async function onStopButtonClick() {
-  if (myCharacteristic) {
+  async function onStartButtonClick() {
     try {
-      await myCharacteristic.stopNotifications()
-      console.log('> Notifications stopped')
-      myCharacteristic.removeEventListener('characteristicvaluechanged',
-          handleNotifications);
+      console.log('Requesting Bluetooth Device...')
+      const device = await navigator.bluetooth.requestDevice({
+          filters: [{ services: [ serviceUuid ] }]})
+
+      console.log('Connecting to GATT Server...')
+      const server = await device.gatt.connect()
+
+      console.log('Getting Service...')
+      const service = await server.getPrimaryService(serviceUuid)
+
+      console.log('Getting Characteristics...')
+      listCharacteristic = await service.getCharacteristic(listCharacteristicUuid)
+      setSSIDCharacteristic = await service.getCharacteristic(setSSIDCharacteristicUuid)
+      setPasswordCharacteristic = await service.getCharacteristic(setPasswordCharacteristicUuid)
+
+      // TODO: register notification for wifi status
+      await listCharacteristic.startNotifications()
+
+      console.log('> Notifications started')
+      listCharacteristic.addEventListener('characteristicvaluechanged',
+          handleNotifications)
     } catch(error) {
       console.log('Argh! ' + error)
     }
   }
-}
 
-function renderAPList(aps) {
-  var el = document.getElementById('aps')
-  //el.innerHTML = ''
-
-  Object.keys(aps).forEach(function(ap) {
-    // if the ap already exists in the list don't re-add it
-    if(document.getElementById('ap-'+ap))
-      return
-    var d = document.createElement('li')
-    d.id = 'ap-' + ap
-    d.innerText = ap
-    d.style.cursor = 'pointer'
-    d.onclick = function(ev) {
-      var pwd = prompt('please enter the password for ' + this.innerText + ':')
-      //alert('password: ' + pwd)
-      // TODO: write AP name & password to characteristics
+  async function onStopButtonClick() {
+    if (listCharacteristic) {
+      try {
+        await listCharacteristic.stopNotifications()
+        console.log('> Notifications stopped')
+        listCharacteristic.removeEventListener('characteristicvaluechanged',
+            handleNotifications)
+      } catch(error) {
+        console.log('Argh! ' + error)
+      }
     }
-    el.appendChild(d)
-  })
-}
-
-function handleNotifications(event) {
-  let value = event.target.value
-  let a = []
-  // Convert raw data bytes to hex values just for the sake of showing something.
-  // In the "real" world, you'd use data.getUint8, data.getUint16 or even
-  // TextDecoder to process raw data bytes.
-  for (let i = 0; i < value.byteLength; i++) {
-    //a.push('0x' + ('00' + value.getUint8(i).toString(16)).slice(-2));
-    a.push(String.fromCharCode(value.getUint8(i)))
   }
-  aps[a.join('')] = true
-  renderAPList(aps)
-  //console.log('> ' + a.join(''));
-}
+
+  function renderAPList(aps) {
+    var el = document.getElementById('aps')
+    //el.innerHTML = ''
+
+    Object.keys(aps).forEach(function(ap) {
+      // if the ap already exists in the list don't re-add it
+      if(document.getElementById('ap-'+ap))
+        return
+      var d = document.createElement('li')
+      d.id = 'ap-' + ap
+      d.innerText = ap
+      d.style.cursor = 'pointer'
+      d.onclick = function(ev) {
+        var pwd = prompt('please enter the password for ' + this.innerText + ':')
+        var enc = new TextEncoder('utf-8')
+        setSSIDCharacteristic.writeValue(enc.encode(this.innerText))
+        setPasswordCharacteristic.writeValue(enc.encode(pwd))
+        // TODO: set ui to connecting mode
+      }
+      el.appendChild(d)
+    })
+  }
+
+  function handleNotifications(event) {
+    var dec = new TextDecoder('utf-8')
+    var k = dec.decode(event.target.value)
+    aps[k] = true
+    renderAPList(aps)
+  }
 
   document.querySelector('#startNotifications').addEventListener('click', function(event) {
     event.stopPropagation()
@@ -126,7 +114,8 @@ function handleNotifications(event) {
       console.clear()
       onStartButtonClick()
     }
-  });
+  })
+
   document.querySelector('#stopNotifications').addEventListener('click', function(event) {
     event.stopPropagation()
     event.preventDefault()
@@ -134,14 +123,14 @@ function handleNotifications(event) {
     if (isWebBluetoothEnabled()) {
       onStopButtonClick()
     }
-  });
+  })
 
   function isWebBluetoothEnabled() {
     if (navigator.bluetooth) {
       return true
     } else {
       ChromeSamples.setStatus('Web Bluetooth API is not available.\n' +
-          'Please make sure the "Experimental Web Platform features" flag is enabled.');
+          'Please make sure the "Experimental Web Platform features" flag is enabled.')
       return false
     }
   }
