--- a/service-bluetooth/web/index.html
+++ b/service-bluetooth/web/index.html
@@ -29,10 +29,11 @@
   var aps = {}
   var serviceUuid = '6e400001-b5a3-f393-e0a9-e50e24dcca9e'
   var listCharacteristicUuid = '6e400002-b5a3-f393-e0a9-e50e24dcca9e'
+  var statusUuid = '6e400002-b5a3-f393-e0a9-e50e24dcca9f'
   var setSSIDCharacteristicUuid = '6e400002-b5a3-f393-e0a9-e50e24dcca80'
   var setPasswordCharacteristicUuid = '6e400002-b5a3-f393-e0a9-e50e24dcca81'
 
-  var listCharacteristic, setSSIDCharacteristic, setPasswordCharacteristic
+  var listCharacteristic, setSSIDCharacteristic, setPasswordCharacteristic, statusCharacteristic
 
   async function onStartButtonClick() {
     try {
@@ -50,13 +51,16 @@
       listCharacteristic = await service.getCharacteristic(listCharacteristicUuid)
       setSSIDCharacteristic = await service.getCharacteristic(setSSIDCharacteristicUuid)
       setPasswordCharacteristic = await service.getCharacteristic(setPasswordCharacteristicUuid)
+      statusCharacteristic = await service.getCharacteristic(statusUuid)
 
-      // TODO: register notification for wifi status
       await listCharacteristic.startNotifications()
+      await statusCharacteristic.startNotifications()
 
       console.log('> Notifications started')
       listCharacteristic.addEventListener('characteristicvaluechanged',
           handleNotifications)
+      statusCharacteristic.addEventListener('characteristicvaluechanged',
+          handleStatusNotifications)
     } catch(error) {
       console.log('Argh! ' + error)
     }
@@ -105,6 +109,12 @@
     renderAPList(aps)
   }
 
+  function handleStatusNotifications(event) {
+    var dec = new TextDecoder('utf-8')
+    var newStatus = dec.decode(event.target.value)
+    console.log('TODO: deal with new status:', newStatus)
+  }
+
   document.querySelector('#startNotifications').addEventListener('click', function(event) {
     event.stopPropagation()
     event.preventDefault()
@@ -134,7 +144,6 @@
     }
   }
 </script>
-
 
   </body>
 </html>
