--- a/service-website/index.html
+++ b/service-website/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<head>
-  <title>SmartDeco.ai</title>
-</head>
-<html>
+<html lang="en">
+  <head>
+    <title>SmartDeco.ai</title>
+  </head>
   <body style="text-align: center">
-     <img src="/images/logo_small_transparent.png">
+     <img src="/images/logo_small_transparent.png" alt="logo">
   </body>
 </html>
