--- a/service-bluetooth/web/index.html
+++ b/service-bluetooth/web/index.html
@@ -15,12 +15,10 @@
 </script>
 
 <style>
-@import url(https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900);
-@import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700);
 
 body{
   color:#4a5b65;
-  font-family: "Roboto", Arial, sans-serif;
+  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
   font-size:18px;
   line-height: 20px;
 }
@@ -269,7 +267,7 @@ button {
     } else if (newStatus === 'connected') {
       document.getElementById('join-success').style.display = ''
       document.getElementById('join-failed').style.display = 'none'
-      document.getElementById('join-output').innerText = 'Your smart deco pumpkin is now connected to the internet! You can close this page now.'
+      document.getElementById('join-output').innerText = 'Your smart deco pumpkin is now connected to the internet! You may safely close this page now.'
       document.getElementById('wifi-connecting-card').style.display = 'none'
       document.getElementById('wifi-join-result-card').style.display = ''
     } else {
